// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@button: matches snapshot * appearance * empty 1`] = `
<TouchableOpacity
  activeOpacity={1}
  alignment="left"
  appearance="filled"
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  size="medium"
  status="primary"
  style={
    Array [
      Object {
        "backgroundColor": "#2196F3",
        "borderRadius": 6,
        "flexDirection": "row",
        "minHeight": 24,
        "minWidth": 24,
        "padding": 4,
      },
      undefined,
      Object {
        "alignItems": "center",
        "justifyContent": "space-evenly",
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
/>
`;

exports[`@button: matches snapshot * appearance * icon 1`] = `
<TouchableOpacity
  activeOpacity={1}
  alignment="left"
  appearance="filled"
  dispatch={[Function]}
  icon={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  size="medium"
  status="primary"
  style={
    Array [
      Object {
        "backgroundColor": "#2196F3",
        "borderRadius": 6,
        "flexDirection": "row",
        "minHeight": 24,
        "minWidth": 24,
        "padding": 4,
      },
      undefined,
      Object {
        "alignItems": "center",
        "justifyContent": "space-evenly",
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <Component
    source={
      Object {
        "uri": "https://akveo.github.io/eva-icons/fill/png/128/star.png",
      }
    }
    style={
      Object {
        "height": 13,
        "marginHorizontal": 4,
        "tintColor": "#ffffff",
        "width": 13,
      }
    }
  />
</TouchableOpacity>
`;

exports[`@button: matches snapshot * appearance * icon and text 1`] = `
<TouchableOpacity
  activeOpacity={1}
  alignment="left"
  appearance="filled"
  dispatch={[Function]}
  icon={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  size="medium"
  status="primary"
  style={
    Array [
      Object {
        "backgroundColor": "#2196F3",
        "borderRadius": 6,
        "flexDirection": "row",
        "minHeight": 24,
        "minWidth": 24,
        "padding": 4,
      },
      undefined,
      Object {
        "alignItems": "center",
        "justifyContent": "space-evenly",
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <Component
    source={
      Object {
        "uri": "https://akveo.github.io/eva-icons/fill/png/128/star.png",
      }
    }
    style={
      Object {
        "height": 13,
        "marginHorizontal": 4,
        "tintColor": "#ffffff",
        "width": 13,
      }
    }
  />
  <ForwardRef(WrappingElement)
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontSize": 12,
          "fontWeight": "800",
          "marginHorizontal": 4,
        },
        Object {},
      ]
    }
  >
    BUTTON
  </ForwardRef(WrappingElement)>
</TouchableOpacity>
`;

exports[`@button: matches snapshot * appearance * text 1`] = `
<TouchableOpacity
  activeOpacity={1}
  alignment="left"
  appearance="filled"
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  size="medium"
  status="primary"
  style={
    Array [
      Object {
        "backgroundColor": "#2196F3",
        "borderRadius": 6,
        "flexDirection": "row",
        "minHeight": 24,
        "minWidth": 24,
        "padding": 4,
      },
      undefined,
      Object {
        "alignItems": "center",
        "justifyContent": "space-evenly",
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(WrappingElement)
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontSize": 12,
          "fontWeight": "800",
          "marginHorizontal": 4,
        },
        Object {},
      ]
    }
  >
    BUTTON
  </ForwardRef(WrappingElement)>
</TouchableOpacity>
`;

exports[`@button: matches snapshot * interaction * stateless 1`] = `
<TouchableOpacity
  activeOpacity={1}
  alignment="left"
  appearance="filled"
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  size="medium"
  status="primary"
  style={
    Array [
      Object {
        "backgroundColor": "#2196F3",
        "borderRadius": 6,
        "flexDirection": "row",
        "minHeight": 24,
        "minWidth": 24,
        "padding": 4,
      },
      undefined,
      Object {
        "alignItems": "center",
        "justifyContent": "space-evenly",
      },
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
/>
`;
